--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
-name = "pyimgui"
-version = "0.1.0"
+name = "genesis"
+version = "0.0.1"
 description = ""
 authors = ["teleprint-me <77757836+teleprint-me@users.noreply.github.com>"]
 readme = "README.md"
@@ -13,6 +13,7 @@ dearpygui = "^1.9.0"
 black = "^23.3.0"
 flake8 = "^6.0.0"
 pytest = "^7.3.1"
+isort = "^5.12.0"
 
 [build-system]
 requires = ["poetry-core"]
