--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 dearpygui = "^1.9.0"
+numpy = "^1.24.3"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.3.0"
