--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,8 @@ genisis.db
 #
 # Local directories
 #
-data/
-assets/
+./chat
+./assets
 
 #
 # Dependencies
@@ -33,12 +33,77 @@ assets/
 # Built Visual Studio Code Extensions
 *.vsix
 
-# Linter
-!.flake8
+#
+# C/C++
+#
+
+# Prerequisites
+*.d
+
+# Object files
+*.o
+*.ko
+*.obj
+*.elf
+*.slo
+*.lo
+
+# Linker output
+*.ilk
+*.map
+*.exp
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Libraries
+*.lib
+*.a
+*.la
+*.lo
+*.lai
+
+# Shared objects (inc. Windows DLLs)
+*.dll
+*.so
+*.so.*
+*.dylib
+
+# Executables
+*.exe
+*.out
+*.app
+*.i*86
+*.x86_64
+*.hex
+
+# Debug files
+*.dSYM/
+*.su
+*.idb
+*.pdb
+
+# Kernel Module Compile Results
+*.mod*
+*.cmd
+.tmp_versions/
+modules.order
+Module.symvers
+Mkfile.old
+dkms.conf
+
+# Fortran module files
+*.mod
+*.smod
 
 #
 # Python
 #
+
+# Linter
+!.flake8
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
