fix: Restore configs and ignore ini
Signed-off-by: teleprint-me <77757836+teleprint-me@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 #
 # Local files
 #
-output.txt
 genisis.db
 
 #
@@ -16,6 +15,12 @@ genisis.db
 ./cpr
 ./imgui
 ./llama.cpp
+
+#
+# Configuration files
+#
+*.ini
+*.txt
 
 #
 # Visual Studio Code
