fix: Ignore main build, chat, and assets and rm deps
Signed-off-by: teleprint-me <77757836+teleprint-me@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,14 @@
 #
 # Local files
 #
-./main
+/main
 genisis.db
 
 #
 # Local directories
 #
-./chat
-./assets
-
-#
-# Dependencies
-#
-./cpr
-./imgui
-./llama.cpp
+/chat
+/assets
 
 #
 # Configuration files
