--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,12 +9,14 @@ readme = "README.md"
 python = "^3.10"
 numpy = "^1.24.3"
 imgui = "^2.0.0"
+langchain = "^0.0.162"
+openai = "^0.27.6"
 
 [tool.poetry.group.dev.dependencies]
-black = "^23.3.0"
 flake8 = "^6.0.0"
-pytest = "^7.3.1"
+black = "^23.3.0"
 isort = "^5.12.0"
+pytest = "^7.3.1"
 
 [build-system]
 requires = ["poetry-core"]
