fix: Turn off indentation detection to avoid Makefile errors
Signed-off-by: teleprint-me <77757836+teleprint-me@users.noreply.github.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -40,5 +40,7 @@
     "editor.defaultFormatter": null,
     "[javascript]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode"
-    }
+    },
+    "editor.insertSpaces": false,
+    "editor.detectIndentation": false
 }
