--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "submodules/llama.cpp"]
 	path = submodules/llama.cpp
 	url = https://github.com/ggerganov/llama.cpp.git
+[submodule "submodules/json"]
+	path = submodules/json
+	url = https://github.com/nlohmann/json
